gradients suck and other style changes

--- a/html5up-miniport/css/style.css
+++ b/html5up-miniport/css/style.css
@@ -11,7 +11,6 @@
 	font-weight: normal;
 	font-style: normal;
 }
-
 @font-face
 {
 	font-family: 'Font-Awesome-Social';
@@ -262,11 +261,6 @@
 		text-shadow: -1px -1px 0.5px rgba(0,0,0,0.5);
 		overflow: hidden;
 		background: #61b8db;
-		background-image: -moz-linear-gradient(top, rgba(97,184,219,0), rgba(48,141,196,1));
-		background-image: -webkit-linear-gradient(top, rgba(97,184,219,0), rgba(48,141,196,1));
-		background-image: -o-linear-gradient(top, rgba(97,184,219,0), rgba(48,141,196,1));
-		background-image: -ms-linear-gradient(top, rgba(97,184,219,0), rgba(48,141,196,1));
-		background-image: linear-gradient(top, rgba(97,184,219,0), rgba(48,141,196,1));
 		box-shadow: inset 0px 0px 0px 1px #135c86, inset 0px 2px 1px 0px rgba(255,255,255,0.75);
 		-moz-transition: background-color .2s ease-in-out;
 		-webkit-transition: background-color .2s ease-in-out;
@@ -289,17 +283,12 @@
 
 		.button:hover
 		{
-			background-color: #76cdf0;
+			background-color: #3399cc;
 			color: #fff !important;
 		}
 		
 		.button:active
 		{
-			background-image: -moz-linear-gradient(top, rgba(48,141,196,1), rgba(77,164,199,0));
-			background-image: -webkit-linear-gradient(top, rgba(48,141,196,1), rgba(77,164,199,0));
-			background-image: -o-linear-gradient(top, rgba(48,141,196,1), rgba(77,164,199,0));
-			background-image: -ms-linear-gradient(top, rgba(48,141,196,1), rgba(77,164,199,0));
-			background-image: linear-gradient(top, rgba(48,141,196,1), rgba(77,164,199,0));
 			box-shadow: inset 0px 0px 0px 1px #135c86, inset 0px -2px 1px 0px rgba(255,255,255,0.75);
 			top: 1px;
 		}
@@ -307,11 +296,6 @@
 		.button-alt
 		{
 			background-color: #393939;
-			background-image: -moz-linear-gradient(top, rgba(50,50,50,0), rgba(45,45,45,1));
-			background-image: -webkit-linear-gradient(top, rgba(50,50,50,0), rgba(45,45,45,1));
-			background-image: -o-linear-gradient(top, rgba(50,50,50,0), rgba(45,45,45,1));
-			background-image: -ms-linear-gradient(top, rgba(50,50,50,0), rgba(45,45,45,1));
-			background-image: linear-gradient(top, rgba(50,50,50,0), rgba(45,45,45,1));
 			box-shadow: inset 0px 0px 0px 1px #242424, inset 0px 2px 1px 0px rgba(255,255,255,0.2);
 		}
 
@@ -322,12 +306,7 @@
 			
 			.button-alt:active
 			{
-				background-image: -moz-linear-gradient(top, rgba(45,45,45,1), rgba(50,50,50,0));
-				background-image: -webkit-linear-gradient(top, rgba(45,45,45,1), rgba(50,50,50,0));
-				background-image: -o-linear-gradient(top, rgba(45,45,45,1), rgba(50,50,50,0));
-				background-image: -ms-linear-gradient(top, rgba(45,45,45,1), rgba(50,50,50,0));
-				background-image: linear-gradient(top, rgba(45,45,45,1), rgba(50,50,50,0));
-				box-shadow: inset 0px 0px 0px 1px #242424, inset 0px -2px 1px 0px rgba(255,255,255,0.2);
+				
 			}
 	
 		.button-big
@@ -349,11 +328,6 @@
 			border-radius: 6px;
 			overflow: hidden;
 			background: #444;
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
-			background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
-			background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.2));
 			-moz-transition: background-color .2s ease-in-out, top .2s ease-in-out;
 			-webkit-transition: background-color .2s ease-in-out, top .2s ease-in-out;
 			-o-transition: background-color .2s ease-in-out, top .2s ease-in-out;
@@ -804,6 +778,7 @@
 	.wrapper-first
 	{
 		box-shadow: none;
+        height: 100vh;
 	}
 
 	.wrapper-style1
