--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,27 @@
     text-align: center;
 }
 
-.image img {
-    width: auto;
+#portfolio .image {
+    height:200px;
+}
+
+.image #origami-logo {
+    width: 200px;
+    top:35px;
+    position: relative;
+    left: 50%;
+    margin-left: -100px;
+    margin-top: 25px;
+
+}
+
+.image #rentcast-logo {
+    width: 300px;
+    top: 50%;
+    margin-top: -35px;
+    position: relative;
+    left: 50%;
+    margin-left: -150px;
+    margin-top: 25px;
 
 }
